--- a/cn/about.html
+++ b/cn/about.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="viggo" />
-    <title>WebStack.cc - 设计师网址导航</title>
-    <meta name="keywords" content="UI设计,UI设计素材,设计导航,网址导航,设计资源,创意导航,创意网站导航,设计师网址大全,设计素材大全,设计师导航,UI设计资源,优秀UI设计欣赏,设计师导航,设计师网址大全,设计师网址导航,产品经理网址导航,交互设计师网址导航,www.webstack.cc">
-    <meta name="description" content="WebStack - 收集国内外优秀设计网站、UI设计资源网站、灵感创意网站、素材资源网站，定时更新分享优质产品设计书签。www.webstack.cc">
+    <title>ngy123.com - 南宫远网址导航</title>
+    <meta name="keywords" content="南宫远网址导航,www.ngy123.com">
+    <meta name="description" content="WebStack - 收集国内外优秀网站。www.ngy123.com">
     <link rel="shortcut icon" href="../assets/images/favicon.png">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Arimo:400,700,400italic">
     <link rel="stylesheet" href="../assets/css/fonts/linecons/css/linecons.css">
@@ -37,14 +37,14 @@
     <!-- / FB Open Graph -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="http://www.webstack.cc/">
-    <meta property="og:title" content="WebStack - 收集国内外优秀设计网站、UI设计资源网站、灵感创意网站、素材资源网站，定时更新分享优质产品设计书签。www.webstack.cc">
-    <meta property="og:description" content="UI设计,UI设计素材,设计导航,网址导航,设计资源,创意导航,创意网站导航,设计师网址大全,设计素材大全,设计师导航,UI设计资源,优秀UI设计欣赏,设计师导航,设计师网址大全,设计师网址导航,产品经理网址导航,交互设计师网址导航,www.webstack.cc">
+    <meta property="og:title" content="WebStack - 南宫远网址导航,www.ngy123.com">
+    <meta property="og:description" content="南宫远网址导航,www.ngy123.com">
     <meta property="og:image" content="http://webstack.cc/assets/images/webstack_banner_cn.png">
-    <meta property="og:site_name" content="WebStack - 收集国内外优秀设计网站、UI设计资源网站、灵感创意网站、素材资源网站，定时更新分享优质产品设计书签。www.webstack.cc">
+    <meta property="og:site_name" content="WebStack - 南宫远网址导航,www.ngy123.com">
     <!-- / Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="WebStack - 收集国内外优秀设计网站、UI设计资源网站、灵感创意网站、素材资源网站，定时更新分享优质产品设计书签。www.webstack.cc">
-    <meta name="twitter:description" content="UI设计,UI设计素材,设计导航,网址导航,设计资源,创意导航,创意网站导航,设计师网址大全,设计素材大全,设计师导航,UI设计资源,优秀UI设计欣赏,设计师导航,设计师网址大全,设计师网址导航,产品经理网址导航,交互设计师网址导航,www.webstack.cc">
+    <meta name="twitter:title" content=" - 南宫远网址导航,www.ngy123.com">
+    <meta name="twitter:description" content="南宫远网址导航,www.ngy123.com">
     <meta name="twitter:image" content="http://www.webstack.cc/assets/images/webstack_banner_cn.png">
 </head>
 
@@ -75,8 +75,8 @@
                                     <blockquote>
                                         <p>有一段时间我发现我的收藏夹越来越多，很难找到某个不常用的网站。所以就有了这个网站，这里收集的基本都是我自己浏览器收藏夹里的网站，我平时用的相对比较多的一些都在这里。</p>
                                         </br>
-                                        <p>如果你也是设计师，如果你也正好喜欢设计，那希望这个网站能给你带来一些作用。</p>
-                                        <p>闲聊或者有任何建议都可以加QQ群交流，一群：<strong>304584722</strong>  二群：<strong>740911918</strong></p>
+                                        <p>如果你也是投资者，希望这个网站能给你带来一些作用。</p>
+                                        <p>有任何建议都可以加微信ngy2022交流</p>
                                     </blockquote>
                                 </div>
                             </div>
@@ -121,7 +121,7 @@
                 <div class="footer-inner">
                     <div class="footer-text">
                         &copy; 2017 - 2020
-                        <a href="../cn/about.html"><strong>WebStack</strong></a> design by <a href="http://viggoz.com" target="_blank"><strong>Viggo</strong></a>
+                        <a href="../cn/about.html"><strong>WebStack</strong></a> design by <a href="http://www.ngy123.com" target="_blank"><strong>Viggo</strong></a>
                     </div>
                     <div class="go-up">
                         <a href="#" rel="go-top">
