--- a/cn/about.html
+++ b/cn/about.html
@@ -36,7 +36,7 @@
     <![endif]-->
     <!-- / FB Open Graph -->
     <meta property="og:type" content="article">
-    <meta property="og:url" content="http://www.webstack.cc/">
+    <meta property="og:url" content="http://www.ngy123.com/">
     <meta property="og:title" content="WebStack - 南宫远网址导航,www.ngy123.com">
     <meta property="og:description" content="南宫远网址导航,www.ngy123.com">
     <meta property="og:image" content="http://webstack.cc/assets/images/webstack_banner_cn.png">
@@ -84,7 +84,7 @@
                             <h4 class="text-gray">关于站长</h4>
                             <div class="row">
                                 <div class="col-sm-4">
-                                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://www.viggoz.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://www.viggoz.com/">
+                                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://www.ngy123.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://www.viggoz.com/">
                                         <div class="xe-comment-entry">
                                             <a class="xe-user-img">
                                                 <img src="../assets/images/logos/viggoz.png" class="img-circle" width="40">
@@ -104,7 +104,7 @@
                                             <br />
                                             <blockquote>
                                                 <p>
-                                                    这是一个公益项目，而且是<a href="https://github.com/WebStackPage/WebStackPage.github.io"> 开源 </a>的。你也可以拿来制作自己的网址导航。如果你有更好的想法，可以通过个人网站<a href="http://www.viggoz.com"><span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip">viggoz.com</span></a>中的联系方式找到我，欢迎与我交流分享。
+                                                    这是一个导航站<a href="http://www.ngy123.com"><span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip">viggoz.com</span></a>中的联系方式找到我，欢迎与我交流分享。
                                                 </p>
                                             </blockquote>
                                         </div>
