--- a/cn/about.html
+++ b/cn/about.html
@@ -104,7 +104,7 @@
                                             <br />
                                             <blockquote>
                                                 <p>
-                                                    这是一个导航站<a href="http://www.ngy123.com"><span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip">viggoz.com</span></a>中的联系方式找到我，欢迎与我交流分享。
+                                                    这是一个导航站<a href="http://www.ngy123.com"><span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip">ngy123.com</span></a>中的联系方式找到我，欢迎与我交流分享。
                                                 </p>
                                             </blockquote>
                                         </div>
