--- a/cn/about.html
+++ b/cn/about.html
@@ -91,9 +91,9 @@
                                             </a>
                                             <div class="xe-comment">
                                                 <a href="#" class="xe-user-name overflowClip_1">
-                                                    <strong>Designer. Viggo.</strong>
+                                                    <strong>南宫远.</strong>
                                                 </a>
-                                                <p class="overflowClip_2"> Full-time UI designer with an enduring interest in Coding.</p>
+                                                <p class="overflowClip_2"> ngy123.com.</p>
                                             </div>
                                         </div>
                                     </div>
