--- a/cn/about.html
+++ b/cn/about.html
@@ -58,7 +58,7 @@
                 </a>
             </div>
             <div class="navbar-mobile-clear"></div>
-            <a href="https://github.com/WebStackPage/WebStackPage.github.io" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+            <a href="" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src=""></a>
         </div>
     </nav>
     <div class="page-container">
@@ -120,8 +120,8 @@
             <footer class="main-footer sticky footer-type-1 fixed">
                 <div class="footer-inner">
                     <div class="footer-text">
-                        &copy; 2017 - 2020
-                        <a href="../cn/about.html"><strong>WebStack</strong></a> design by <a href="http://www.ngy123.com" target="_blank"><strong>Viggo</strong></a>
+                        &copy; 2025 - 2033
+                        <a href="../cn/about.html"><strong>ngy123.com</strong></a> design by <a href="http://www.ngy123.com" target="_blank"><strong>ngy123</strong></a>
                     </div>
                     <div class="go-up">
                         <a href="#" rel="go-top">
