--- a/cn/about.html
+++ b/cn/about.html
@@ -39,13 +39,13 @@
     <meta property="og:url" content="http://www.ngy123.com/">
     <meta property="og:title" content="WebStack - 南宫远网址导航,www.ngy123.com">
     <meta property="og:description" content="南宫远网址导航,www.ngy123.com">
-    <meta property="og:image" content="http://webstack.cc/assets/images/webstack_banner_cn.png">
+    <meta property="og:image" content="">
     <meta property="og:site_name" content="WebStack - 南宫远网址导航,www.ngy123.com">
     <!-- / Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=" - 南宫远网址导航,www.ngy123.com">
     <meta name="twitter:description" content="南宫远网址导航,www.ngy123.com">
-    <meta name="twitter:image" content="http://www.webstack.cc/assets/images/webstack_banner_cn.png">
+    <meta name="twitter:image" content="">
 </head>
 
 <body class="page-body boxed-container">
@@ -53,8 +53,8 @@
         <div class="navbar-inner">
             <div class="navbar-brand">
                 <a href="index.html" class="logo">
-                    <img src="../assets/images/logo_dark@2x.png" width="100%" alt="" class="hidden-xs">
-                    <img src="../assets/images/logo@2x.png" width="100%" alt="" class="visible-xs">
+                    <img src="../assets/images/ngy.png" width="100%" alt="" class="hidden-xs">
+                    <img src="../assets/images/ngy.png" width="100%" alt="" class="visible-xs">
                 </a>
             </div>
             <div class="navbar-mobile-clear"></div>
