--- a/cn/index.html
+++ b/cn/index.html
@@ -46,13 +46,13 @@
     <meta property="og:url" content="http://www.webstack.cc/">
     <meta property="og:title" content="ngy123.com 南宫远导航站">
     <meta property="og:description" content="ngy123.com 南宫远导航站">
-    <meta property="og:image" content="http://webstack.cc/assets/images/webstack_banner_cn.png">
+    <meta property="og:image" content="">
     <meta property="og:site_name" content="ngy123.com 南宫远导航站">
     <!-- / Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="ngy123.com 南宫远导航站">
     <meta name="twitter:description" content="ngy123.com 南宫远导航站">
-    <meta name="twitter:image" content="http://www.webstack.cc/assets/images/webstack_banner_cn.png">
+    <meta name="twitter:image" content="">
 </head>
 
 <body class="page-body">
@@ -64,10 +64,10 @@
                     <!-- logo -->
                     <div class="logo">
                         <a href="index.html" class="logo-expanded">
-                            <img src="../assets/images/logo@2x.png" width="100%" alt="" />
+                            <img src="../assets/images/ngy.png" width="100%" alt="" />
                         </a>
                         <a href="index.html" class="logo-collapsed">
-                            <img src="../assets/images/logo-collapsed@2x.png" width="40" alt="" />
+                            <img src="../assets/images/ngy.png" width="40" alt="" />
                         </a>
                     </div>
                     <div class="mobile-menu-toggle visible-xs">
