--- a/cn/index.html
+++ b/cn/index.html
@@ -22,7 +22,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="viggo" />
+    <meta name="author" content="ngy" />
     <title>ngy123.com 南宫远导航站</title>
     <meta name="keywords" content="ngy123.com 南宫远导航站">
     <meta name="description" content="ngy123.com 南宫远导航站">
@@ -43,7 +43,7 @@
     <![endif]-->
     <!-- / FB Open Graph -->
     <meta property="og:type" content="article">
-    <meta property="og:url" content="http://www.webstack.cc/">
+    <meta property="og:url" content="http://www.ngy123.com/">
     <meta property="og:title" content="ngy123.com 南宫远导航站">
     <meta property="og:description" content="ngy123.com 南宫远导航站">
     <meta property="og:image" content="">
