--- a/cn/index.html
+++ b/cn/index.html
@@ -341,7 +341,7 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://behance.net/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://behance.net/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://weibo.com/7594643421', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://weibo.com/7594643421">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/behance.png" class="lozad img-circle" width="40">
@@ -350,7 +350,7 @@
                                 <a href="#" class="xe-user-name overflowClip_1">
                                     <strong>Behance</strong>
                                 </a>
-                                <p class="overflowClip_2">Adobe旗下的设计师交流平台，来自世界各地的设计师在这里分享自己的作品。</p>
+                                <p class="overflowClip_2">南宫远的微博。</p>
                             </div>
                         </div>
                     </div>
