--- a/cn/index.html
+++ b/cn/index.html
@@ -333,7 +333,7 @@
                             </a>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>x</strong>
+                                    <strong>x.com</strong>
                                 </a>
                                 <p class="overflowClip_2">南宫远的推特X。</p>
                             </div>
@@ -348,7 +348,7 @@
                             </a>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>Behance</strong>
+                                    <strong>weibo</strong>
                                 </a>
                                 <p class="overflowClip_2">南宫远的微博。</p>
                             </div>
