--- a/cn/index.html
+++ b/cn/index.html
@@ -508,31 +508,31 @@
             <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="界面灵感"></i>推荐</h4>
             <div class="row">
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.aliyun.com/minisite/goods?userCode=xtct5egx&share_source=copy_link', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.aliyun.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://accounts.binance.com/zh-TW/register?ref=10022763', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.aliyun.com/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/aliyun.png" class="lozad img-circle" width="40">
                             </a>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>阿里云</strong>
+                                    <strong>币安</strong>
                                 </a>
-                                <p class="overflowClip_2">点击领取2000元限量云产品优惠券</p>
+                                <p class="overflowClip_2">全球第一交易所</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.gulusucai.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.gulusucai.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.okx.com/cn/join/1847115', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.gulusucai.com/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/gulusucai.png" class="lozad img-circle" width="40">
                             </a>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>咕噜素材</strong>
+                                    <strong>OKX交易所</strong>
                                 </a>
-                                <p class="overflowClip_2">质量很高的设计素材网站（推荐）</p>
+                                <p class="overflowClip_2">全球第二交易所</p>
                             </div>
                         </div>
                     </div>
