--- a/cn/index.html
+++ b/cn/index.html
@@ -356,16 +356,16 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://www.ui.cn/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://www.ui.cn/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.baidu.com/s?wd=%E6%AF%94%E7%89%B9%E5%B8%81%E7%9A%84%E7%BE%8E%E5%85%83%E4%BB%B7%E6%A0%BC&rsv_spt=1&rsv_iqid=0xc3cd7ac90002853f&issp=1&f=8&rsv_bp=1&rsv_idx=2&ie=utf-8&rqlang=cn&tn=baiduhome_pg&rsv_enter=1&rsv_dl=tb&oq=%25E6%25AF%2594%25E7%2589%25B9%25E5%25B8%2581%25E4%25BB%25B7%25E6%25A0%25BC&rsv_btype=t&inputT=1554&rsv_t=c52dHmgnWyFxeFduSIiGJ4eIRJqB7rPiwYP9Yjv9ySSsuilDP0zaIVW67LD9hLhGBnuU&rsv_pq=a25386bc00004ac7&rsv_sug3=26&rsv_sug1=19&rsv_sug7=100&rsv_sug2=0&rsv_sug4=5085', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://www.ui.cn/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/uicn.png" class="lozad img-circle" width="40">
                             </a>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>UI中国</strong>
+                                    <strong>比特币实时价格</strong>
                                 </a>
-                                <p class="overflowClip_2">图形交互与界面设计交流、作品展示、学习平台。</p>
+                                <p class="overflowClip_2">比特币实时美元价格，由百度提供。</p>
                             </div>
                         </div>
                     </div>
@@ -617,65 +617,65 @@
             </div>
             <br />
             <!--END 推荐 -->            
-            <!-- 社区资讯 -->
-            <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="社区资讯"></i>社区资讯</h4>
+            <!-- AI推荐 -->
+            <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="AI推荐"></i>AI推荐</h4>
             <div class="row">
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.leiphone.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.leiphone.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://chatgpt.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.leiphone.com/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/leiphone.png" class="lozad img-circle" width="40">
                             </a>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>雷锋网</strong>
+                                    <strong>chatgpt</strong>
                                 </a>
-                                <p class="overflowClip_2">人工智能和智能硬件领域的互联网科技媒体</p>
+                                <p class="overflowClip_2">最强最早的ai</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://36kr.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://36kr.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://grok.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://36kr.com/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/36kr.png" class="lozad img-circle" width="40">
                             </a>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>36kr</strong>
+                                    <strong>grok</strong>
                                 </a>
-                                <p class="overflowClip_2">创业资讯、科技新闻</p>
+                                <p class="overflowClip_2">推特旗下的AI</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.digitaling.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.digitaling.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://claude.ai/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.digitaling.com/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/digitaling.png" class="lozad img-circle" width="40">
                             </a>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>数英网</strong>
+                                    <strong>claude</strong>
                                 </a>
-                                <p class="overflowClip_2">数字媒体及职业招聘网站</p>
+                                <p class="overflowClip_2">OpenAI 出走的前员工创立的AI</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://www.lieyunwang.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://www.lieyunwang.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://gemini.google.com/app', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://www.lieyunwang.com/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/lieyunwang.png" class="lozad img-circle" width="40">
                             </a>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>猎云网</strong>
+                                    <strong>gemini</strong>
                                 </a>
-                                <p class="overflowClip_2">互联网创业项目推荐和创业创新资讯</p>
+                                <p class="overflowClip_2">谷歌旗下的AI</p>
                             </div>
                         </div>
                     </div>
@@ -683,7 +683,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://www.woshipm.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://www.woshipm.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.vsoul.ai/desktop', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://www.woshipm.com/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/woshipm.png" class="lozad img-circle" width="40">
@@ -692,7 +692,7 @@
                                 <a href="#" class="xe-user-name overflowClip_1">
                                     <strong>人人都是产品经理</strong>
                                 </a>
-                                <p class="overflowClip_2">产品经理、产品爱好者学习交流平台</p>
+                                <p class="overflowClip_2">学习交流平台</p>
                             </div>
                         </div>
                     </div>
