--- a/cn/index.html
+++ b/cn/index.html
@@ -621,7 +621,7 @@
             <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="AI推荐"></i>AI推荐</h4>
             <div class="row">
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://chatgpt.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.leiphone.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://chatgpt.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://chatgpt.com/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/leiphone.png" class="lozad img-circle" width="40">
@@ -636,7 +636,7 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://grok.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://36kr.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://grok.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://grok.com/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/36kr.png" class="lozad img-circle" width="40">
@@ -651,7 +651,7 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://claude.ai/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.digitaling.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://claude.ai/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://claude.ai/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/digitaling.png" class="lozad img-circle" width="40">
@@ -666,7 +666,7 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://gemini.google.com/app', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://www.lieyunwang.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://gemini.google.com/app', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://gemini.google.com/app">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/lieyunwang.png" class="lozad img-circle" width="40">
@@ -683,7 +683,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.vsoul.ai/desktop', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://www.woshipm.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.vsoul.ai/desktop', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.vsoul.ai/desktop">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/woshipm.png" class="lozad img-circle" width="40">
