--- a/cn/index.html
+++ b/cn/index.html
@@ -698,16 +698,16 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.zaodula.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.zaodula.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://chat.baidu.com/search?isShowHello=1&pd=csaitab&setype=csaitab&extParamsJson=%7B%22enter_type%22%3A%22home_tab%22%7D', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.baidu.com/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/zaodula.png" class="lozad img-circle" width="40">
                             </a>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>互联网早读课</strong>
+                                    <strong>百度AI</strong>
                                 </a>
-                                <p class="overflowClip_2">互联网行业深度阅读与学习平台</p>
+                                <p class="overflowClip_2">百度旗下的AI</p>
                             </div>
                         </div>
                     </div>
