--- a/cn/index.html
+++ b/cn/index.html
@@ -315,11 +315,11 @@
                 <ul class="user-info-menu right-links list-inline list-unstyled">
                     <li class="hidden-sm hidden-xs">
                         <a href="" target="_blank">
-                            <i class=""></i>  GitHub
+                            <i class=""></i>  重新打开本站
                         </a>
                     </li>
                 </ul>
-                <!-- <a href="https://github.com/WebStackPage/WebStackPage.github.io" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a> -->
+                <!-- <a href="" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a> -->
 
             </nav>
             <!-- 常用推荐 -->
@@ -371,16 +371,16 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://www.zcool.com.cn/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://www.zcool.com.cn/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://snapany.com/zh', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://snapany.com/zh/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/zcool.png" class="lozad img-circle" width="40">
                             </a>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>站酷</strong>
+                                    <strong>万能视频下载</strong>
                                 </a>
-                                <p class="overflowClip_2">中国人气设计师互动平台</p>
+                                <p class="overflowClip_2">万能视频图片解析下载</p>
                             </div>
                         </div>
                     </div>
