--- a/cn/index.html
+++ b/cn/index.html
@@ -388,7 +388,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.pinterest.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.pinterest.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://yaps.kaito.ai/user', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://yaps.kaito.ai/user">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/pinterest.png" class="lozad img-circle" width="40">
@@ -396,9 +396,9 @@
                             <span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip"></span>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>Pinterest</strong>
+                                    <strong>kaito</strong>
                                 </a>
-                                <p class="overflowClip_2">全球美图收藏采集站</p>
+                                <p class="overflowClip_2">kol积分排行</p>
                             </div>
                         </div>
                     </div>
