--- a/cn/index.html
+++ b/cn/index.html
@@ -404,7 +404,7 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://huaban.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://huaban.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://fiatmarketcap.com/?continueFlag=744bde3f38e437801ad17fc359cf5dda', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://fiatmarketcap.com/?continueFlag=744bde3f38e437801ad17fc359cf5dda/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/huaban.png" class="lozad img-circle" width="40">
@@ -412,9 +412,9 @@
                             <span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip"></span>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>花瓣</strong>
+                                    <strong>全球货币市值排行榜</strong>
                                 </a>
-                                <p class="overflowClip_2">收集灵感,保存有用的素材</p>
+                                <p class="overflowClip_2">全球各国法币市值排行榜</p>
                             </div>
                         </div>
                     </div>
