--- a/cn/index.html
+++ b/cn/index.html
@@ -420,7 +420,7 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://medium.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://medium.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.coinglass.com/zh', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.coinglass.com/zh">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/medium.png" class="lozad img-circle" width="40">
@@ -428,9 +428,9 @@
                             <span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip"></span>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>Medium</strong>
+                                    <strong>行情与数据coinglass</strong>
                                 </a>
-                                <p class="overflowClip_2">高质量设计文章</p>
+                                <p class="overflowClip_2">需要科学上网</p>
                             </div>
                         </div>
                     </div>
