--- a/cn/index.html
+++ b/cn/index.html
@@ -538,16 +538,16 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://xiyou4you.us/r/?s=13731627', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://xiyou4you.us">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.beeeye.xyz/zh-CN/referral/register?clacCode=MNZREPYS&from=%2Fzh-CN%2Fevents%2Freferral-all-program&source=events&utmSource=PremierInviter', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.beeeye.xyz/zh-CN/referral/register?clacCode=MNZREPYS&from=%2Fzh-CN%2Fevents%2Freferral-all-program&source=events&utmSource=PremierInviter">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/xiyou.png" class="lozad img-circle" width="40">
                             </a>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>西游-科学上网</strong>
+                                    <strong>bitget</strong>
                                 </a>
-                                <p class="overflowClip_2">优秀的科学上网（略贵，但是贼稳，点击注册领取优惠券）</p>
+                                <p class="overflowClip_2">比较活跃的交易所</p>
                             </div>
                         </div>
                     </div>
