--- a/cn/index.html
+++ b/cn/index.html
@@ -508,7 +508,7 @@
             <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="界面灵感"></i>推荐</h4>
             <div class="row">
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://accounts.binance.com/zh-TW/register?ref=10022763', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.aliyun.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://accounts.binance.com/zh-TW/register?ref=10022763', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://accounts.binance.com/zh-TW/register?ref=10022763/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/aliyun.png" class="lozad img-circle" width="40">
@@ -523,7 +523,7 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.okx.com/cn/join/1847115', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.gulusucai.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.okx.com/cn/join/1847115', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.okx.com/cn/join/1847115">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/gulusucai.png" class="lozad img-circle" width="40">
