--- a/cn/index.html
+++ b/cn/index.html
@@ -436,7 +436,7 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://www.uisdc.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://www.uisdc.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://mp.weixin.qq.com/?token=832296781&lang=zh_CN', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://mp.weixin.qq.com/?token=832296781&lang=zh_CN">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/uisdc.png" class="lozad img-circle" width="40">
@@ -444,9 +444,9 @@
                             <span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip"></span>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>优设</strong>
+                                    <strong>微信公众号</strong>
                                 </a>
-                                <p class="overflowClip_2">设计师交流学习平台</p>
+                                <p class="overflowClip_2">微信公众号发布文章的地方</p>
                             </div>
                         </div>
                     </div>
