--- a/cn/index.html
+++ b/cn/index.html
@@ -454,7 +454,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.producthunt.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.producthunt.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.panewslab.com/zh/index.html/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.panewslab.com/zh/index.html">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/producthunt.png" class="lozad img-circle" width="40">
@@ -462,9 +462,9 @@
                             <span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip"></span>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>Producthunt</strong>
+                                    <strong>pnnews币圈新闻</strong>
                                 </a>
-                                <p class="overflowClip_2">发现新鲜有趣的产品</p>
+                                <p class="overflowClip_2">币圈新闻网站</p>
                             </div>
                         </div>
                     </div>
@@ -497,6 +497,23 @@
                                     <strong>Google</strong>
                                 </a>
                                 <p class="overflowClip_2">全球最大的UI学习分享平台</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+             <div class="col-sm-3">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://coinmarketcap.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://coinmarketcap.com/">
+                        <div class="xe-comment-entry">
+                            <a class="xe-user-img">
+                                <img data-src="../assets/images/logos/google.png" class="lozad img-circle" width="40">
+                            </a>
+                            <span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip"></span>
+                            <div class="xe-comment">
+                                <a href="#" class="xe-user-name overflowClip_1">
+                                    <strong>mytoken</strong>
+                                </a>
+                                <p class="overflowClip_2">行情网站需要科学上网</p>
                             </div>
                         </div>
                     </div>
