--- a/cn/index.html
+++ b/cn/index.html
@@ -462,7 +462,7 @@
                             <span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip"></span>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>pnnews币圈新闻</strong>
+                                    <strong>panews币圈新闻</strong>
                                 </a>
                                 <p class="overflowClip_2">币圈新闻网站</p>
                             </div>
