--- a/cn/index.html
+++ b/cn/index.html
@@ -811,7 +811,7 @@
             <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="发现产品"></i>发现产品</h4>
             <div class="row">
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.producthunt.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.producthunt.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://v2ex.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://v2ex.com/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/producthunt.png" class="lozad img-circle" width="40">
@@ -819,9 +819,9 @@
                             <span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip"></span>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>Producthunt</strong>
+                                    <strong>v2ex</strong>
                                 </a>
-                                <p class="overflowClip_2">发现新鲜有趣的产品</p>
+                                <p class="overflowClip_2">V2EX是一个面向程序员、极客人群的分享交流社区</p>
                             </div>
                         </div>
                     </div>
