--- a/cn/index.html
+++ b/cn/index.html
@@ -713,16 +713,16 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://www.chanpin100.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://www.chanpin100.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://vdraw.ai/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://vdraw.ai/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/chanpin100.png" class="lozad img-circle" width="40">
                             </a>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>产品壹佰</strong>
+                                    <strong>ai图表生成器</strong>
                                 </a>
-                                <p class="overflowClip_2">为产品经理爱好者提供最优质的产品资讯、原创内容和相关视频课程</p>
+                                <p class="overflowClip_2">文字生成图标，可以替代claud的部分工作</p>
                             </div>
                         </div>
                     </div>
