--- a/cn/index.html
+++ b/cn/index.html
@@ -568,16 +568,18 @@
                     </div>
                 </div> -->
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.shejizhoukan.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.shejizhoukan.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.gatewebsite.com/zh/signup?ref_type=102&ref=UwdFUQ
+', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.gatewebsite.com/zh/signup?ref_type=102&ref=UwdFUQ
+">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/shejizhoukan.png" class="lozad img-circle" width="40">
                             </a>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>设计周刊</strong>
+                                    <strong>大门交易所gateio</strong>
                                 </a>
-                                <p class="overflowClip_2">最新设计资讯（每天更新）</p>
+                                <p class="overflowClip_2">经常有活动可以撸撸毛</p>
                             </div>
                         </div>
                     </div>
@@ -827,16 +829,16 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://next.36kr.com/posts', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://next.36kr.com/posts">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.yuque.com/u39594597/ffp1h4', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.yuque.com/u39594597/ffp1h4">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
                                 <img data-src="../assets/images/logos/NEXT.png" class="lozad img-circle" width="40">
                             </a>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>NEXT</strong>
+                                    <strong>语雀</strong>
                                 </a>
-                                <p class="overflowClip_2">不错过任何一个新产品</p>
+                                <p class="overflowClip_2">语雀撸羊毛合集</p>
                             </div>
                         </div>
                     </div>
